<resources>
    <string name="app_name">Door Lock</string>
    <string name="title"><b>Door Lock</b></string>
    <string name="wallpaper">Wallpapers</string>
    <string name="door_themes">Door Themes</string>
    <string name="enable_door_lock"><b>Enable Door Lock</b></string>
    <string name="sound">Sounds</string>
    <string name="recover_pass">Recovery</string>
    <string name="question">Question</string>
    <string name="done"><b>Done</b></string>
    <string name="security_question">Security Question</string>
    <string name="answer">Answer</string>
    <string name="lock_type"><b>Lock Type</b></string>
    <string name="dots_lock">Dots Lock</string>
    <string name="dot_lock"><b>Pin Lock</b></string>
    <string name="select_door_themes"><b>Select Door Themes</b></string>
    <string name="select_wallpaper_theme"><b>Select Wallpaper Theme</b></string>
    <string name="_one">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="pindone"><b>Done</b></string>
    <string name="enter_your_pin"><b>Enter your pin</b></string>
    <string name="create_your_pattern">Create your pattern</string>
    <string name="pattern_lock">Pattern lock</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="select_sound">Select Sound</string>
    <string name="confirm_your_pin">Confirm your pin</string>
    <string name="enter_your_pingere">Enter your pin</string>
    <string name="draw_your_pattern">Draw your pattern</string>
    <string name="confirm_your_pattern">Confirm your pattern</string>
    <string name="enter_your_pattern">Enter your pattern</string>
    <string name="saving_your_device_unlock_state">Saving your device unlock state</string>
    <string name="door_lock_app">Door Lock Is Running</string>
    <string name="your_answer">Your Answer</string>
    <string name="inturder_detect">Intruder detect</string>
    <string name="set_lock">Set Lock</string>
    <string name="delete">Delete</string>
</resources>